sdk/include/ml.h

/* ========================================================================== */
/*                              CORE TYPES & UTILITIES                         */
/* ========================================================================== */

/** Plugin Id string type - plain char* for plugin id
 * @ref ml_get_device_list device must in list of plugin ids
 */
typedef const char* ml_PluginId;
/** Path string type - plain char* for file paths */
typedef const char* ml_Path;
typedef enum {
    ML_LOG_LEVEL_TRACE, /* Trace messages */
    ML_LOG_LEVEL_DEBUG, /* Debug messages */
    ML_LOG_LEVEL_INFO,  /* Informational messages */
    ML_LOG_LEVEL_WARN,  /* Warning messages */
    ML_LOG_LEVEL_ERROR  /* Error messages */
} ml_LogLevel;
/** Logging callback function type */
typedef void (*ml_log_callback)(ml_LogLevel, const char*);
/** LLM / VLM model configuration */
typedef struct {
    int32_t n_ctx;            // text context, 0 = from model
    int32_t n_threads;        // number of threads to use for generation
    int32_t n_threads_batch;  // number of threads to use for batch processing
    int32_t n_batch;          // logical maximum batch size that can be submitted to llama_decode
    int32_t n_ubatch;         // physical maximum batch size
    int32_t n_seq_max;        // max number of sequences (i.e. distinct states for recurrent models)
    int32_t n_gpu_layers;     // number of layers to offload to GPU, 0 = all layers on CPU

    // TODO: consider removing the following fields from ModelConfig, or move to another struct
    ml_Path     chat_template_path;     // path to chat template file, optional
    const char* chat_template_content;  // content of chat template file, optional
    const char* system_prompt;          // system prompt for chat template, optional
    bool        enable_sampling;        // DEPRECATED, use enable_json in ml_SamplerConfig
    const char* grammar_str;            // grammar string
    int32_t     max_tokens;             // max tokens to generate
    bool        enable_thinking;        // enable thinking mode for Qwen models
    bool        verbose;                // verbose logging
    // For QNN
    ml_Path qnn_model_folder_path;  // path to QNN model folder, default same as model_path
    ml_Path qnn_lib_folder_path;    // path to QNN library folder, default same as model_path
} ml_ModelConfig;
/* ========================================================================== */
/*                              COMPUTER VISION (CV)                           */
/* ========================================================================== */

/* ====================  Generic CV Data Types  ============================= */
/** Generic bounding box structure */
typedef struct {
    float x;      /* X coordinate (normalized or pixel, depends on model) */
    float y;      /* Y coordinate (normalized or pixel, depends on model) */
    float width;  /* Width */
    float height; /* Height */
} ml_BoundingBox;
/** Generic detection/classification result */
typedef struct {
    ml_Path*       image_paths;   /* Output image paths (caller must free with ml_free) */
    int32_t        image_count;   /* Number of output images */
    int32_t        class_id;      /* Class ID (example: ConvNext) */
    float          confidence;    /* Confidence score [0.0-1.0] */
    ml_BoundingBox bbox;          /* Bounding box (example: YOLO) */
    const char*    text;          /* Text result (example: OCR) (caller must free with ml_free) */
    float*         embedding;     /* Feature embedding (example: CLIP embedding) (caller must free with ml_free) */
    int32_t        embedding_dim; /* Embedding dimension */
    float*         mask;          /* Mask (example: segmentation mask) (caller must free with ml_free) */
    int32_t        mask_h;        /* Mask height */
    int32_t        mask_w;        /* Mask width */
} ml_CVResult;
/** CV capabilities */
typedef enum {
    ML_CV_OCR            = 0, /* OCR */
    ML_CV_CLASSIFICATION = 1, /* Classification */
    ML_CV_SEGMENTATION   = 2, /* Segmentation */
    ML_CV_CUSTOM         = 3, /* Custom task */
} ml_CVCapabilities;
/** CV model preprocessing configuration */
typedef struct {
    ml_CVCapabilities capabilities;   /* Capabilities */
    ml_Path           det_model_path; /* detection model path */
    ml_Path           rec_model_path; /* recognition model path */
    ml_Path           char_dict_path; /* Character dictionary path */

    // QNN
    ml_Path qnn_model_folder_path; /* Model path */
    ml_Path qnn_lib_folder_path;   /* System library path */
} ml_CVModelConfig;
/* ====================  Generic CV Model  ================================== */

typedef struct ml_CV ml_CV; /* Opaque CV model handle */
typedef struct {
    const char*      model_name; /** Name of the model */
    ml_CVModelConfig config;     /** CV model configuration */
    ml_PluginId      plugin_id;  /** Plugin to use for the model */
    const char*      device_id;  /** device to use for the model */
    const char* license_id;  /** licence id for loading NPU models, must be provided upon the first use of the license
                                key. null terminated string */
    const char* license_key; /** licence key for loading NPU models, null terminated string */
} ml_CVCreateInput;
/* ====================  Lifecycle Management  ============================== */

/**
 * @brief Create and initialize a CV model
 *
 * @param input[in]: Input parameters for the CV model creation
 * @param out_handle[out]: Pointer to the CV model handle. Must be freed with ml_cv_destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 */
ML_API int32_t ml_cv_create(const ml_CVCreateInput* input, ml_CV** out_handle);
/**
 * @brief Destroy CV model instance and free associated resources
 *
 * @param handle[in]: The CV model handle to destroy.
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 */
ML_API int32_t ml_cv_destroy(ml_CV* handle);
/* ====================  Generic Inference  ================================= */
/** Input structure for CV inference */
typedef struct {
    const char* input_image_path; /* Input image path */
} ml_CVInferInput;
/** Output structure for CV inference */
typedef struct {
    ml_CVResult* results;      /* Array of CV results (caller must free with ml_free) */
    int32_t      result_count; /* Number of CV results */
} ml_CVInferOutput;
/**
 * @brief Perform inference on a single image
 *
 * @param handle[in]: The CV model handle
 * @param input[in]: Input parameters for the inference
 * @param output[out]: Output data containing the inference results
 *
 * @return ml_ErrorCode: ML_SUCCESS on success, negative on failure.
 */
ML_API int32_t ml_cv_infer(const ml_CV* handle, const ml_CVInferInput* input, ml_CVInferOutput* output);